--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         z-index: 10;
         text-align: left;
         margin: 0px;
-        background: #333;
+        background: #E1E1E1;
         opacity: 0.9;
         padding: 2px;
         /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
@@ -46,8 +46,9 @@
     .labelInner {
         padding: 3px 0px;
         font-family: Helvetica, sans-serif;
-        font-size: 16px;
-        color: white;
+        font-weight: bold;
+        font-size: 24px;
+        color: #666;
         opacity: 2.0;
         margin: 0px;
     }
