--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Eraser Maps cartography</title>
 
-    <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.css" />
 
     <style>
         body {
@@ -68,7 +68,7 @@
     <div id="map"></div>
 
     <!-- Leaflet -->
-    <script src="lib/leaflet/leaflet.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.js"></script>
     <script src="lib/leaflet-hash.js"></script>
 
     <!-- Keymaster handles keyboard input -->
