--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
     <script src='https://mapzen.com/common/ui/mapzen-ui.min.js'></script>
     <script>
       MPZN.bug({
-      name: 'Mapzen Eraser Map cartography',
-      link: 'https://tangrams.github.io/eraser-map/',
-      tweet: 'Eraser Map cartography from @mapzen',
-      repo: 'https://github.com/tangrams/eraser-map/'
+      name: 'Mapzen Bubble Wrap cartography',
+      link: 'https://tangrams.github.io/bubble-wrap/',
+      tweet: 'Bubble Wrap cartography from @mapzen',
+      repo: 'https://github.com/tangrams/bubble-wrap/'
     });
     </script>
     <script>
