load Open Sans as web font, use FontFaceObserver to block on font load

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Bubble Wrap cartography</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css" />
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <style>
         body {
@@ -85,8 +86,8 @@
 
     <!-- 3rd party libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
-    <!-- bog-standard leaflet URL hash -->
     <script src="lib/leaflet-hash.js"></script>
+    <script src='lib/fontfaceobserver.js'></script>
 
     <!-- Keymaster handles keyboard input -->
     <script src="lib/keymaster.js"></script>
