--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <style>
-        body {
+        body {f
             margin: 0px;
             border: 0px;
             padding: 0px;
@@ -93,7 +93,7 @@
     <script src="lib/keymaster.js"></script>
 
     <!-- Main tangram library -->
-    <script src="https://mapzen.com/tangram/0.6/tangram.min.js"></script>
+    <script src="https://mapzen.com/tangram/0.7/tangram.min.js"></script>
 
     <!-- Demo module -->
     <script src="main.js"></script>
