--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <style>
-        body {f
+        body {
             margin: 0px;
             border: 0px;
             padding: 0px;
