--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Bubble Wrap cartography</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.1/leaflet.css" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <style>
@@ -93,7 +93,7 @@
     <script src="lib/keymaster.js"></script>
 
     <!-- Main tangram library -->
-    <script src="https://mapzen.com/tangram/0.7/tangram.min.js"></script>
+    <script src="https://mapzen.com/tangram/0.8/tangram.min.js"></script>
 
     <!-- Demo module -->
     <script src="main.js"></script>
