--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div id="map"></div>
 
     <!-- 3rd party libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.1/leaflet.js"></script>
     <script src="lib/leaflet-hash.js"></script>
     <script src='lib/fontfaceobserver.js'></script>
 
