--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
     }
 
     </style>
+
+    <!-- A lightweight graphical user interface for changing variables in JavaScript.  -->
+    <script src="lib/dat.gui.min.js"></script>
+
+    <!-- FileSaver.js implements the HTML5 W3C saveAs(), used in the demo to save screenshots -->
+    <script src="lib/FileSaver.js"></script>
+
   </head>
 
   <body>
