--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
     <!-- Main tangram library -->
     <!-- production -->
-    <!-- <script src="https://mapzen.com/tangram/0.9/tangram.min.js"></script> -->
+    <script src="https://mapzen.com/tangram/0.9/tangram.min.js"></script>
     <!-- production debug -->
-    <script src="https://mapzen.com/tangram/0.9/tangram.debug.js"></script>
+    <!-- <script src="https://mapzen.com/tangram/0.9/tangram.debug.js"></script> -->
     <!-- dev -->
     <!-- <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script> -->
 
