--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
     <!-- <script src="https://mapzen.com/tangram/0.9/tangram.debug.js"></script> -->
     <!-- dev -->
     <!-- <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script> -->
+    <!-- dev branch -->
+    <!-- <script src="https://precog.mapzen.com/tangrams/tangram/articulated-labels-merged/dist/tangram.debug.js"></script> -->
 
     <!-- Demo module -->
     <script src="main.js"></script>
