--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 
     <!-- Main tangram library -->
     <!-- production -->
-    <script src="https://mapzen.com/tangram/0.10/tangram.min.js"></script>
+    <!-- <script src="https://mapzen.com/tangram/0.10/tangram.min.js"></script> -->
     <!-- production debug -->
     <!-- <script src="https://mapzen.com/tangram/0.10/tangram.debug.js"></script> -->
     <!-- dev -->
     <!-- <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script> -->
     <!-- dev branch -->
-    <!-- <script src="https://precog.mapzen.com/tangrams/tangram/articulated-labels-merged/dist/tangram.debug.js"></script> -->
+    <script src="https://precog.mapzen.com/tangrams/tangram/placement-min-ratio/dist/tangram.debug.js"></script>
 
     <!-- Demo module -->
     <script src="main.js"></script>
