<!-- comments in html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- dev -->
     <!-- <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script> -->
     <!-- dev branch -->
-    // <script src="https://precog.mapzen.com/tangrams/tangram/placement-min-ratio/dist/tangram.debug.js"></script>
+    <!-- <script src="https://precog.mapzen.com/tangrams/tangram/placement-min-ratio/dist/tangram.debug.js"></script> -->
 
     <!-- Demo module -->
     <script src="main.js"></script>
