--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             margin: 0px;
             border: 0px;
             padding: 0px;
+            overflow: hidden;
         }
 
         #map {
