omg, scene.config.global, duh

--- a/index.html
+++ b/index.html
@@ -460,9 +460,9 @@
                 scene.config.global.text_visible_poi_landuse_e = _more;
                 scene.config.global.icon_visible_station = _more;
 
-                scene.config.icon_visible_landuse_green = _default;
-                scene.config.text_visible_landuse_green = _default;
-                scene.config.text_visible_landuse_generic = _default;
+                scene.config.global.icon_visible_landuse_green = _default;
+                scene.config.global.text_visible_landuse_green = _default;
+                scene.config.global.text_visible_landuse_generic = _default;
                 if( _more ) {
                     scene.config.global.icon_size_green = [[13, '14px'], [16, '18px'], [18, '19px']];
                     scene.config.global.icon_size_green_nationl_park = [[10,'18px'],[12,'28px'],[13,'36px']];
