--- a/index.html
+++ b/index.html
@@ -222,7 +222,10 @@
         map.setView(map_start_location.slice(0, 2), map_start_location[2]);
 
         var layer = Tangram.leafletLayer({
-            scene: 'bubble-wrap.yaml',
+            // more: 'vector-tiles-7bfyfz8'
+            // default (some): 'mapzen-PvjAKRW'
+            // no: 'mapzen-UHeMjEw'
+            scene: { import: 'bubble-wrap.yaml', global: { sdk_mapzen_api_key: 'vector-tiles-7bfyfz8' } },
             attribution: '<a href="https://mapzen.com/tangram" target="_blank">Tangram</a>, &copy; OSM contributors'
         });
 
@@ -398,26 +401,34 @@
 
             // Labels selector
             var labels = {
-                '(default)': 'some',
+                '(default)': 'more',
                 'More': 'more',
                 'Some': 'some',
+                'Some (no shields)': 'some_no_shields',
                 'None': 'none'
             };
-            // use query language, else default to English
             gui.labels = query.labels || 'more';
             gui.add(gui, 'labels', labels).onChange(function(value) {
                 var _default = true;
                 var _more = false;
+                var _road_shields = true;
 
                 if(value === 'more') {
                     _more = true;
                     _default = true;
+                    _road_shields = true;
                 } else if(value === 'some') {
                     _more = false;
                     _default = true;
+                    _road_shields = true;
+                } else if(value === 'some_no_shields') {
+                    _more = false;
+                    _default = true;
+                    _road_shields = false;
                 } else {
                     _more = false;
                     _default = false;
+                    _road_shields = false;
                 }
 
                 scene.config.global.text_visible_continent = _default;
@@ -430,7 +441,8 @@
                 scene.config.global.text_visible_water_labels = _default;
                 scene.config.global.text_visible_island = _default;
 
-                scene.config.global.sdk_road_shields = _default;
+                scene.config.global.sdk_road_shields = _road_shields;
+
                 scene.config.global.text_visible_roads = _default;
                 scene.config.global.text_visible_highway = _default;
                 scene.config.global.text_visible_highway_e = _default;
@@ -481,16 +493,6 @@
                     scene.config.global.icon_size_green_airport = [[0, '0px']];
                     scene.config.global.icon_size_green_l = [[0, '0px']];
                 }
-
-                // Oct. 7, 2016
-                //need to rework this, upon switching back to labels, buildings stay light and labels dont read
-                // if( _val ) {
-                //     scene.config.global.building_style = 'buildings_with_labels';
-                //     scene.config.global.building_lines_with_or_without_labels = '[0.512,0.594,0.840]';
-                // } else {
-                //     scene.config.global.building_style = 'buildings_no_labels';
-                //     scene.config.global.building_lines_with_or_without_labels = '[0.567,0.658,0.930]';
-                // }
                 scene.updateConfig();
                 //window.location.search = 'language=' + value;
             });
