reorg a few label visibility globals

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
         <!-- Main tangram library -->
         <!-- production -->
-        <script src="https://mapzen.com/tangram/0.11/tangram.min.js"></script>
+        <!-- <script src="https://mapzen.com/tangram/0.11/tangram.min.js"></script> -->
         <!-- production debug -->
         <!-- <script src="https://mapzen.com/tangram/0.11/tangram.debug.js"></script> -->
         <!-- dev -->
         <!-- <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script> -->
         <!-- dev branch -->
-        <!-- <script src="https://precog.mapzen.com/tangrams/tangram/placement-min-ratio/dist/tangram.debug.js"></script> -->
+        <script src="https://precog.mapzen.com/tangrams/tangram/labels-rebase/dist/tangram.min.js"></script>
 
         <!-- A lightweight graphical user interface for changing variables in JavaScript.  -->
         <script type="text/javascript" src="lib/dat.gui.min.js"></script>
@@ -465,12 +465,12 @@
                 scene.config.global.text_visible_minor_road_e = _default;
                 scene.config.global.text_visible_exits_e = _default;
 
-                scene.config.text_visible_aerialway = _default;
+                scene.config.global.text_visible_aerialway = _default;
                 scene.config.global.text_visible_airport_gate = _default;
                 scene.config.global.text_visible_exits = _default;
 
-                scene.config.global.text_visible_buildings = _default;
-                scene.config.global.text_visible_addresses = _default;
+                scene.config.global.text_visible_building = _more;
+                scene.config.global.text_visible_addresses = _more;
 
                 scene.config.global.label_visible_poi_landuse = _more;
                 scene.config.global.label_visible_poi_landuse_e = _more;
@@ -481,7 +481,7 @@
 
                 scene.config.global.icon_visible_landuse_green = _default;
                 scene.config.global.text_visible_landuse_green = _default;
-                scene.config.global.text_visible_landuse_generic = _default;
+                scene.config.global.text_visible_landuse_generic = _more;
                 if( _more ) {
                     scene.config.global.icon_size_green = [[13, '14px'], [16, '18px'], [18, '19px']];
                     scene.config.global.icon_size_green_nationl_park = [[10,'18px'],[12,'28px'],[13,'36px']];
