back to prod tangram

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
         <!-- Main tangram library -->
         <!-- production -->
-        <!-- <script src="https://mapzen.com/tangram/0.11/tangram.min.js"></script> -->
+        <script src="https://mapzen.com/tangram/0.11/tangram.min.js"></script>
         <!-- production debug -->
         <!-- <script src="https://mapzen.com/tangram/0.11/tangram.debug.js"></script> -->
         <!-- dev -->
         <!-- <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script> -->
         <!-- dev branch -->
-        <script src="https://precog.mapzen.com/tangrams/tangram/labels-rebase/dist/tangram.min.js"></script>
+        <!-- <script src="https://precog.mapzen.com/tangrams/tangram/labels-rebase/dist/tangram.min.js"></script> -->
 
         <!-- A lightweight graphical user interface for changing variables in JavaScript.  -->
         <script type="text/javascript" src="lib/dat.gui.min.js"></script>
