default label GUI

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
             // Labels selector
             var labels = {
-                '(default)': 'more',
+                '(default)': 'some',
                 'More': 'more',
                 'Some': 'some',
                 'Some (no shields)': 'some_no_shields',
