--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             // default (some): 'mapzen-PvjAKRW'
             // no: 'mapzen-UHeMjEw'
             // dev: 'mapzen-45zyeJa'
-            scene: { import: 'bubble-wrap.yaml', global: { sdk_mapzen_api_key: 'mapzen-PvjAKRW' } },
+            scene: { import: 'bubble-wrap-style.yaml', global: { sdk_mapzen_api_key: 'mapzen-45zyeJa' } },
             attribution: '<a href="https://mapzen.com/tangram" target="_blank">Tangram</a>, &copy; OSM contributors'
         });
 
@@ -408,7 +408,7 @@
                 'Some (no shields)': 'some_no_shields',
                 'None': 'none'
             };
-            gui.labels = query.labels || 'more';
+            gui.labels = query.labels || 'some';
             gui.add(gui, 'labels', labels).onChange(function(value) {
                 var _default = true;
                 var _more = false;
