--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             // default (some): 'mapzen-PvjAKRW'
             // no: 'mapzen-UHeMjEw'
             // dev: 'mapzen-45zyeJa'
-            scene: { import: 'bubble-wrap-style.yaml', global: { sdk_mapzen_api_key: 'mapzen-45zyeJa' } },
+            scene: { import: 'bubble-wrap-style.yaml', global: { sdk_mapzen_api_key: 'mapzen-PvjAKRW' } },
             attribution: '<a href="https://mapzen.com/tangram" target="_blank">Tangram</a>, &copy; OSM contributors'
         });
 
