--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- dev -->
         <!-- <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script> -->
         <!-- dev branch -->
-        <!-- <script src="https://precog.mapzen.com/tangrams/tangram/labels-rebase/dist/tangram.min.js"></script> -->
+        <!-- <script src="https://precog.mapzen.com/tangrams/tangram/labels-rebase-test/dist/tangram.min.js"></script> -->
 
         <!-- A lightweight graphical user interface for changing variables in JavaScript.  -->
         <script type="text/javascript" src="lib/dat.gui.min.js"></script>
@@ -627,7 +627,9 @@
                             // enable iD to show properties sidebar for selected feature
                             osm_type = 'node';
                             osm_zoom = '19'
-                            if( selection.feature.properties.sort_key ) {
+                            // tilezen adds sort_key for any way or relation thing, but because we generate
+                            // label positions for area features, we need to do two tests
+                            if( selection.feature.properties.sort_key || selection.feature.properties.area ) {
                                 osm_type = 'way';
                                 osm_zoom = Math.max( 17, map.getZoom() );
                             }
@@ -635,6 +637,8 @@
                             if( osm_id < 0 ) {
                                 osm_type = 'relation'
                                 osm_id = Math.abs( osm_id );
+                                // zoom out a bit because we assume this is a larger feature
+                                // but don't zoom out too far, as iD breaks
                                 osm_zoom = Math.max( 16, map.getZoom() );
                             }
                             url += osm_type + '=' + osm_id;
