--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
         <!-- Main tangram library -->
         <!-- production -->
-        <!--<script src="https://mapzen.com/tangram/0.13/tangram.min.js"></script>-->
+        <script src="https://mapzen.com/tangram/0.14/tangram.min.js"></script>
         <!-- production debug -->
         <!-- <script src="https://mapzen.com/tangram/0.13/tangram.debug.js"></script> -->
         <!-- dev -->
-        <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script>
+        <!-- <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script> -->
         <!-- dev branch -->
         <!-- <script src="https://precog.mapzen.com/tangrams/tangram/oriented-lines-rebase/dist/tangram.min.js"></script> -->
 
