--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <!-- Main tangram library -->
         <!-- production -->
-        <script src="https://mapzen.com/tangram/0.14/tangram.min.js"></script>
+        <script src="https://www.nextzen.org/tangram/0.14/tangram.min.js"></script>
         <!-- production debug -->
-        <!-- <script src="https://mapzen.com/tangram/0.13/tangram.debug.js"></script> -->
+        <!-- <script src="https://www.nextzen.org/tangram/0.13/tangram.debug.js"></script> -->
         <!-- dev -->
         <!-- <script src="https://precog.mapzen.com/tangrams/tangram/master/dist/tangram.debug.js"></script> -->
         <!-- dev branch -->
@@ -363,7 +363,7 @@
             var zoom = max_zoom < map.getZoom() ? max_zoom : Math.floor(map.getZoom());
             var tileCoords = { x : long2tile(latlng.lng,zoom), y: lat2tile(latlng.lat,zoom), z: zoom };
 
-            var url = 'http://tile.mapzen.com/mapzen/vector/v1/all/' + zoom + '/' + tileCoords.x  + '/' + tileCoords.y + '.topojson';
+            var url = 'http://tile.nextzen.org/tilezen/vector/v1/all/' + zoom + '/' + tileCoords.x  + '/' + tileCoords.y + '.topojson';
             return url;
         }
 
@@ -626,7 +626,7 @@
                                 var position = '19' + '/' + latlng.lat + '/' + latlng.lng;
 
                                 if( selection.feature.properties.source == 'whosonfirst.mapzen.com' ) {
-                                    var wofUrl = 'https://whosonfirst.mapzen.com/boundaryissues/id/'+selection.feature.properties.id+'/';
+                                    var wofUrl = 'https://www.whosonfirst.org/boundaryissues/id/'+selection.feature.properties.id+'/';
                                     popup.appendChild(createEditLinkElement( wofUrl, 'WOF', 'Edit with Boundary Issues ➹') );
                                 } else {
                                     popup.appendChild(createEditLinkElement( url, 'iD', 'Edit with iD ➹') );
