--- a/index.html
+++ b/index.html
@@ -223,12 +223,13 @@
 
         var tg_baseScene = 'bubble-wrap-style.yaml';
 
-        var dev_or_prod = 'dev';
+        var dev_or_prod = 'prod';
         // prod
         var sdk_api_key = '-ZTNBBKCS5WZa62pfZyUkA';
 
         if( dev_or_prod == 'dev' ) {
-            sdk_api_key = '1YJOees7QwmlS0uYDTc8zg';
+            // sdk_api_key = '1YJOees7QwmlS0uYDTc8zg';
+            sdk_api_key = '-ZTNBBKCS5WZa62pfZyUkA';
         }
 
         var tg_global = { sdk_api_key: sdk_api_key };
