correct 2 char code for Greek language

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 'español (Spanish)': 'es',
                 'বাংলা (Bengali)': 'bn',
                 'Deutsch (German)': 'de',
-                'ελληνικά (Greek)': 'gr',
+                'ελληνικά (Greek)': 'el',
                 'हिन्दी (Hindi)': 'hi',
                 'Bahasa Indonesia (Indonesian)': 'id',
                 'italiano (Italian)': 'it',
