--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@
         var tg_global = { sdk_api_key: sdk_api_key };
 
         var layer = Tangram.leafletLayer({
-            scene: { import: [tg_baseScene], global: tg_global },
+            scene: { import: [  tg_baseScene,
+                                'themes/bubble-wrap-road-shields-usa.yaml',
+                                'themes/bubble-wrap-road-shields-international.yaml'], 
+                            global: tg_global },
             attribution: '<a href="https://github.com/tangrams/tangram" target="_blank">Tangram</a>, &copy; OSM contributors'
         });
 
@@ -390,7 +393,11 @@
 
 
             // So many themes
-            var all_theme_imports = { color: null, detail: null, label: null };
+            var all_theme_imports = { color: null,
+                                      detail: null,
+                                      label: null,
+                                      road_shields_usa: 'themes/bubble-wrap-road-shields-usa.yaml',
+                                      road_shields_international: 'themes/bubble-wrap-road-shields-international.yaml' };
 
             function update_scene_with_themes() {
                 //console.log( all_theme_imports );
@@ -403,6 +410,12 @@
                 }
                 if( all_theme_imports.label ) {
                     themes_as_array.push( all_theme_imports.label );
+                }
+                if( all_theme_imports.road_shields_usa ) {
+                    themes_as_array.push( all_theme_imports.road_shields_usa );
+                }
+                if( all_theme_imports.road_shields_international ) {
+                    themes_as_array.push( all_theme_imports.road_shields_international );
                 }
 
                 scene.load({ import: themes_as_array, global: tg_global });
@@ -421,6 +434,33 @@
                 update_scene_with_themes();
 
                 //window.location.search = 'language=' + value;
+            });
+
+
+            // Enable/disable USA state road shields
+            var shields_usa = 'USA shields';
+            gui[shields_usa] = true;
+            gui.add(gui, shields_usa).onChange(function(value) {
+                var import_theme = 'themes/bubble-wrap-road-shields-usa.yaml'
+                if( value ) {
+                    all_theme_imports.road_shields_usa = import_theme;
+                } else {
+                    all_theme_imports.road_shields_usa = null;
+                }
+                update_scene_with_themes();
+            });
+            
+            // Enable/disable international road shields
+            var shields_international = 'International shields';
+            gui[shields_international] = true;
+            gui.add(gui, shields_international).onChange(function(value) {
+                var import_theme = 'themes/bubble-wrap-road-shields-international.yaml'
+                if( value ) {
+                    all_theme_imports.road_shields_international = import_theme;
+                } else {
+                    all_theme_imports.road_shields_international = null;
+                }
+                update_scene_with_themes();
             });
 
 
