move to prod tiles now they are released

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         var tg_baseScene = 'bubble-wrap-style.yaml';
 
-        var dev_or_prod = 'dev';
+        var dev_or_prod = 'prod';
         // prod
         var sdk_api_key = '-ZTNBBKCS5WZa62pfZyUkA';
 
